k8s/admin-analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-analytics-service
  namespace: kayak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-analytics-service
  template:
    metadata:
      labels:
        app: admin-analytics-service
    spec:
      containers:
      - name: admin-analytics-service
        image: kayak-admin-analytics-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: admin-analytics-service
  namespace: kayak
spec:
  type: ClusterIP
  selector:
    app: admin-analytics-service
  ports:
  - port: 3006
    targetPort: 3006
    protocol: TCP
