k8s/billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: kayak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: billing-service
        image: kayak-billing-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: kayak
spec:
  type: ClusterIP
  selector:
    app: billing-service
  ports:
  - port: 3004
    targetPort: 3004
    protocol: TCP
