k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kayak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.5.0
        ports:
        - containerPort: 9092
        - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kayak
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
  - name: external
    port: 9092
    targetPort: 9092
    protocol: TCP
  - name: internal
    port: 9093
    targetPort: 9093
    protocol: TCP
