k8s/review-logging-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-logging-service
  namespace: kayak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review-logging-service
  template:
    metadata:
      labels:
        app: review-logging-service
    spec:
      containers:
      - name: review-logging-service
        image: kayak-review-logging-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: review-logging-service
  namespace: kayak
spec:
  type: ClusterIP
  selector:
    app: review-logging-service
  ports:
  - port: 3005
    targetPort: 3005
    protocol: TCP
